curwa, finally fixed the scrollbar after 1 hr of experimentation

--- a/static/css/jquery.jscrollpane.css
+++ b/static/css/jquery.jscrollpane.css
@@ -5,6 +5,31 @@
  * may not operate correctly without them.
  */
 
+/*	Added to shrink scrollbar 	*/
+.jspCap
+{
+	display: block;
+	background: #eeeef4;
+	opacity:0;
+}
+
+.jspVerticalBar .jspCap
+{
+	height: 20px;
+}
+
+.jspHorizontalBar .jspCap
+{
+	width: 50px;
+	height: 100%;
+}
+/*	*/	
+
+.jspCap
+{
+/*	display: none;*/
+}
+	
 .jspContainer
 {
 	overflow: hidden;
@@ -23,7 +48,7 @@
 	right: 0;
 	width: 3px;
 	height: 100%;
-	background: red;
+/*	background: red;*/
 }
 
 .jspHorizontalBar
@@ -41,11 +66,6 @@
 {
 	margin: 0;
 	padding: 0;
-}
-
-.jspCap
-{
-	display: none;
 }
 
 .jspHorizontalBar .jspCap
